# vs-cmake-conan-demo

./: .gitignore  CMakeLists.txt  CMakeSettings.json  README.md  conan_include.cmake  conanfile.py
echo_app/: CMakeLists.txt
echo_app/src/: echo_client.cpp  echo_server.cpp
